--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="monetag" content="46c24d7ddf97baa6ca128da66bd2bcc6">
+    <meta name="monetag" content="13acf39d2e444d9b6e2103d4287fc833">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Daily News</title>
+    <title>The Daily News Hub</title>
   </head>
   <body>
     <div id="root"></div>
