--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="monetag" content="13acf39d2e444d9b6e2103d4287fc833">
+    <script src="https://alwingulla.com/88/tag.min.js" data-zone="120761" async data-cfasync="false"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
